2004-02-26  Eric Blake  <ebb9@byu.net>

	* src/ast.h (AstFormalParameter::ellipsis_token_opt): New field.
	* src/ast.cpp (AstFormalParameter::Clone, Print): Support it.
	* src/unparse.cpp (AstFormalParameter::Unparse): Ditto.
	* src/body.cpp (ProcessForeachStatement, ProcessTryStatement):
	Ditto.
	* src/decl.cpp (ProcessFormalParameters): Note that varargs are
	not supported yet.
	* src/error.h (VARARGS_UNSUPPORTED): New error.
	* src/error.cpp: Ditto.
	* src/parser.h: Forward declare AstFormalParameter.
	* src/java.g (FormalParameter, FormalParameterList),
	(LocalVariableDeclaration): Parse varargs, from JSR 201.
	* src/javaact.cpp: Regenerate.
	* src/javaact.h: Ditto.
	* src/javadcl.h: Ditto.
	* src/javadef.h: Ditto.
	* src/javasym.h: Ditto.

2004-02-26  Eric Blake  <ebb9@byu.net>

	* src/expr.cpp (ProcessPLUS): Remove bad assertion ('true +
	false', while illegal, can reach this point).

2004-02-26  Eric Blake  <ebb9@byu.net>

	* AUTHORS: Give credit where due.
	* src/bytecode.cpp (EmitAssignmentExpression),
	(EmitBinaryExpression, ConcatenateString, EmitStringAppendMethod):
	Use faster StringBuilder (added in 1.5) when available.
	* src/control.h (*_name_symbol): Rearrange the name_symbols to be
	in alphabetic order.
	(GetPrimitiveType): Improve the signature.
	* src/system.cpp: Implement changes to control.h.
	* src/platform.h: Delete lots of unused string constants, now that
	they are more easily generated in system.cpp.
	* src/control.cpp: Whitespace cleanup, and use changes in
	control.h and platform.h.
	* src/decl.cpp: Ditto.
	* src/error.cpp: Ditto.
	* src/error.h: Ditto.
	* src/expr.cpp: Ditto.
	* src/lookup.cpp: Ditto.
	* src/platform.cpp: Ditto.
	* src/symbol.cpp: Ditto.

2004-02-23  Emil Ong  <emilong@cs.berkeley.edu>, 
            Mark Richters  <mr@Informatik.Uni-Bremen.DE>
	
	* doc/jikes.1: Documented new pedantic flags unused-type-imports
	and unused-package-imports; originally by Mark Richters for 1.12,